--- a/iOS/iOS Design Pattern/Base.lproj/Main.storyboard
+++ b/iOS/iOS Design Pattern/Base.lproj/Main.storyboard
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4hX-dC-KnR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
         <scene sceneID="aR1-0K-smS">
             <objects>
-                <tableViewController id="crS-FM-jSb" customClass="ViewController" customModule="iOS_Design_Pattern" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController restorationIdentifier="ViewController" storyboardIdentifier="ViewController" id="crS-FM-jSb" customClass="ViewController" customModule="iOS_Design_Pattern" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="E5n-wB-0hQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="EVa-4r-LXB" style="IBUITableViewCellStyleDefault" id="CJg-3D-0ne">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
@@ -42,23 +44,66 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yZk-FC-SfQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-142" y="-222"/>
+            <point key="canvasLocation" x="-286" y="-207"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Hoi-s0-rbX">
+        <!--BuyViewController-->
+        <scene sceneID="nRA-4J-bmD">
             <objects>
-                <navigationController id="4hX-dC-KnR" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6ax-9u-v98">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="crS-FM-jSb" kind="relationship" relationship="rootViewController" id="Nrb-u4-xhx"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EQK-2U-dRA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController restorationIdentifier="BuyViewController" storyboardIdentifier="BuyViewController" title="BuyViewController" id="xLm-9T-ZSc" customClass="BuyViewController" customModule="iOS_Design_Pattern" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4tw-R2-qmN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Buy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B82-M0-S6o">
+                                <rect key="frame" x="192" y="442.5" width="30" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NiY-61-bvS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="B82-M0-S6o" firstAttribute="centerX" secondItem="NiY-61-bvS" secondAttribute="centerX" id="NB8-wv-xQ1"/>
+                            <constraint firstItem="B82-M0-S6o" firstAttribute="centerY" secondItem="NiY-61-bvS" secondAttribute="centerY" id="vFo-rh-K7p"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c2Y-Np-tD2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1061" y="-222"/>
+            <point key="canvasLocation" x="1057" y="-830"/>
+        </scene>
+        <!--Create Account View Controller-->
+        <scene sceneID="3qz-fa-Eg9">
+            <objects>
+                <viewController restorationIdentifier="CreateAccountViewController" storyboardIdentifier="CreateAccountViewController" id="fir-QC-gE7" customClass="CreateAccountViewController" customModule="iOS_Design_Pattern" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fhb-sk-396">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nr2-41-rTT">
+                                <rect key="frame" x="148" y="442.5" width="118.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7aH-44-4VH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Nr2-41-rTT" firstAttribute="centerX" secondItem="7aH-44-4VH" secondAttribute="centerX" id="8kh-PI-QJ4"/>
+                            <constraint firstItem="Nr2-41-rTT" firstAttribute="centerY" secondItem="7aH-44-4VH" secondAttribute="centerY" id="Xhq-iy-cem"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kJA-Cw-vQ5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1836" y="-830"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
